fixing some bottom contact bar alignment

--- a/styles.css
+++ b/styles.css
@@ -154,4 +154,5 @@ h2{
 #contactInfo{
     width: 50vw;
     padding-left: 10vw;
+    text-align: left;
 }
